--- a/src/styles/Palette/Palette.scss
+++ b/src/styles/Palette/Palette.scss
@@ -3,7 +3,7 @@ $orange: #e67e22;
 $yellow: #f1c40f;
 $green: #27ae60;
 $blue: #0984e3;
-$skyBlue: #00a8ff;
+$skyBlue: #75A4F5;
 $indigo: #192a56;
 $purple: #6c5ce7;
 $mint: #00d2d3;
