--- a/src/styles/AllStyles.scss
+++ b/src/styles/AllStyles.scss
@@ -12,12 +12,17 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Roboto';
+
+	&:focus {
+		outline: none;
+	}
 }
 
 html,
-body {
+body,
+#root {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background-color: rgba($rgbaBackground, 0.02);
 }
 
