[ADD] Login, Register Auth
로그인 회원가입 총 로직 추가

--- a/src/components/Auth/SignTemplate/SignTemplate.scss
+++ b/src/components/Auth/SignTemplate/SignTemplate.scss
@@ -15,10 +15,14 @@
 	@include setFlexStyle();
 
 	&-Contents {
-		min-width: 400px;
+		min-width: 380px;
 		padding: 10px 0;
 		margin: auto;
 		@include setFlexStyle();
 		justify-content: center;
+
+		&-Logo {
+			height: 100px;
+		}
 	}
 }
