--- a/src/components/Auth/SignUp/SignUp.scss
+++ b/src/components/Auth/SignUp/SignUp.scss
@@ -1,18 +1,20 @@
 .SignUp {
 	width: 100%;
-	margin-top: 45px;
+	margin-top: 30px;
 
 	&-Section {
 		margin-bottom: 8px;
 
 		&-Title {
 			margin-bottom: 4px;
+			font-size: 14px;
 		}
 
 		&-Mail {
 			display: flex;
 			display: -webkit-flex;
 			justify-content: flex-end;
+			margin-top: -2px;
 		}
 	}
 
@@ -20,6 +22,7 @@
 		margin-top: 8px;
 		padding: 0 4px;
 		cursor: pointer;
+		font-size: 14px;
 
 		&:hover {
 			opacity: 0.7;
