--- a/src/components/Common/Auth/AuthInput/AuthInput.scss
+++ b/src/components/Common/Auth/AuthInput/AuthInput.scss
@@ -2,10 +2,10 @@
 
 .AuthInput {
 	width: 100%;
-	height: 50px;
-	padding: 0 1rem;
+	height: 45px;
+	padding: 0 10px;
 	border: 1.5px solid $skyBlue;
 	border-radius: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 	font-size: 14px;
 }
