--- a/src/components/Common/Auth/AuthButton/AuthButton.scss
+++ b/src/components/Common/Auth/AuthButton/AuthButton.scss
@@ -13,4 +13,11 @@
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+
+	& > div {
+		display: flex;
+		display: -webkit-flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
