--- a/src/components/Home/Category/Category.scss
+++ b/src/components/Home/Category/Category.scss
@@ -7,6 +7,10 @@
 	margin-right: 2px;
 
 	&-List {
+		width: inherit;
+		display: inline-block;
+		position: sticky;
+		top: 0px;
 		line-height: 40px;
 
 		&-Item {
