--- a/src/styles/Palette/Palette.scss
+++ b/src/styles/Palette/Palette.scss
@@ -3,13 +3,14 @@ $orange: #e67e22;
 $yellow: #f1c40f;
 $green: #27ae60;
 $blue: #0984e3;
-$skyBlue: #75A4F5;
+$skyBlue: #75a4f5;
 $indigo: #192a56;
 $purple: #6c5ce7;
 $mint: #00d2d3;
 $pink: #e84393;
 $lighterGray: #dfe6e9;
 $gray: #b2bec3;
+$fontGray: #6b6b6b;
 $white: #ffffff;
 $black: #000000;
 $snow: #dff9fb;
