--- a/src/components/Home/MainFeed/FeedBottom/FeedBottom.scss
+++ b/src/components/Home/MainFeed/FeedBottom/FeedBottom.scss
@@ -63,6 +63,14 @@
 					@include bottomIconStyle($black);
 				}
 			}
+
+			&-ViewWrap {
+				@include flexStyle();
+
+				&-View {
+					@include bottomIconStyle($black);
+				}
+			}
 		}
 	}
 }
