--- a/src/components/Home/MainFeed/MainFeed.scss
+++ b/src/components/Home/MainFeed/MainFeed.scss
@@ -2,4 +2,9 @@
 	width: 100%;
 	max-width: 100%;
 	position: relative;
+	display: flex;
+	display: -webkit-flex;
+	flex-direction: column;
+	-ms-flex-direction: column;
+	align-items: center;
 }
