--- a/src/components/Home/MainFeed/FeedItem/FeedItem.scss
+++ b/src/components/Home/MainFeed/FeedItem/FeedItem.scss
@@ -13,11 +13,21 @@
 	padding: 18px;
 	margin-bottom: 6px;
 
-	&-Title {
-		font-size: 20px;
-		font-weight: bold;
+	&-Top {
+		@include flexStyle();
+		justify-content: space-between;
 		border-bottom: 1px solid $main;
 		padding-bottom: 8px;
+		padding-right: 5px;
+
+		&-Title {
+			font-size: 20px;
+			font-weight: bold;
+		}
+
+		&-Category {
+			font-size: 18px;
+		}
 	}
 
 	&-Contents {
