--- a/src/components/Auth/SignTemplate/SignTemplate.scss
+++ b/src/components/Auth/SignTemplate/SignTemplate.scss
@@ -1,5 +1,3 @@
-@import 'styles/Palette/Palette.scss';
-
 @mixin setFlexStyle() {
 	display: flex;
 	display: -webkit-flex;
@@ -10,7 +8,7 @@
 .SignTemplate {
 	width: 100%;
 	height: 100%;
-	background-color: $white;
+	background-color: var(--background);
 
 	@include setFlexStyle();
 
