--- a/src/components/Common/Auth/AuthInput/AuthInput.scss
+++ b/src/components/Common/Auth/AuthInput/AuthInput.scss
@@ -1,10 +1,8 @@
-@import 'styles/Palette/Palette.scss';
-
 .AuthInput {
 	width: 100%;
 	height: 45px;
 	padding: 0 10px;
-	border: 1.5px solid $skyBlue;
+	border: 1.5px solid var(--skyBlue);
 	border-radius: 5px;
 	margin-bottom: 8px;
 	font-size: 14px;
