--- a/src/components/Common/Menus/MenuBar/MenuBar.scss
+++ b/src/components/Common/Menus/MenuBar/MenuBar.scss
@@ -1,5 +1,3 @@
-@import 'styles/Palette/Palette.scss';
-
 .MenuBar {
 	display: flex;
 	display: -webkit-flex;
@@ -9,7 +7,7 @@
 	& > div {
 		width: 8px;
 		height: 8px;
-		background-color: $gray;
+		background-color: var(--gray);
 		border-radius: 50%;
 		margin-left: 4px;
 	}
