--- a/src/components/Common/Post/PostInfo/PostInfo.scss
+++ b/src/components/Common/Post/PostInfo/PostInfo.scss
@@ -1,5 +1,3 @@
-@import 'styles/Palette/Palette.scss';
-
 @mixin flexStyle() {
 	display: flex;
 	display: -webkit-flex;
@@ -38,7 +36,7 @@
 		justify-content: space-evenly;
 
 		&-Time {
-			color: $fontGray;
+			color: var(--fontGray);
 			letter-spacing: 0.5px;
 		}
 
@@ -46,7 +44,7 @@
 			@include flexStyle();
 
 			&-Heart {
-				@include iconStyle($main);
+				@include iconStyle(var(--main));
 			}
 		}
 
@@ -54,7 +52,7 @@
 			@include flexStyle();
 
 			&-Comment {
-				@include iconStyle($black);
+				@include iconStyle(var(--black));
 			}
 		}
 
@@ -62,7 +60,7 @@
 			@include flexStyle();
 
 			&-View {
-				@include iconStyle($black);
+				@include iconStyle(var(--black));
 			}
 		}
 	}
