--- a/src/styles/Palette/Palette.scss
+++ b/src/styles/Palette/Palette.scss
@@ -1,21 +1,24 @@
-$red: #eb2f06;
-$orange: #e67e22;
-$yellow: #f1c40f;
-$green: #27ae60;
-$blue: #0984e3;
-$skyBlue: #75a4f5;
-$indigo: #192a56;
-$purple: #6c5ce7;
-$mint: #00d2d3;
-$pink: #e84393;
-$lighterGray: #dfe6e9;
-$gray: #b2bec3;
-$fontGray: #6b6b6b;
-$white: #ffffff;
-$black: #000000;
-$snow: #dff9fb;
-$main: #5982c8;
-$lighterGreen: #55efc4;
+:root {
+	--red: #eb2f06;
+	--orange: #e67e22;
+	--yellow: #f1c40f;
+	--green: #27ae60;
+	--blue: #0984e3;
+	--skyBlue: #75a4f5;
+	--indigo: #192a56;
+	--purple: #6c5ce7;
+	--mint: #00d2d3;
+	--pink: #e84393;
+	--lighterGray: #dfe6e9;
+	--gray: #b2bec3;
+	--fontGray: #6b6b6b;
+	--white: #ffffff;
+	--black: #000000;
+	--snow: #dff9fb;
+	--main: #5982c8;
+	--lighterGreen: #55efc4;
+	--background: #ffffff;
 
-$rgbaPrimary: rgb(89, 130, 200);
-$rgbaBackground: rgba(241, 242, 246, 0.02);
+	--rgbaPrimary: rgb(89, 130, 200);
+	--rgbaBackground: rgba(241, 242, 246, 0.02);
+}
