[ADD & FIX] PostInfo & other files

--- a/src/components/Home/Category/CategoryItem/CategoryItem.scss
+++ b/src/components/Home/Category/CategoryItem/CategoryItem.scss
@@ -1,5 +1,5 @@
 .CategoryItem {
 	padding-left: 10px;
-	background-color: var(--gray);
+	background-color: var(--lighterGray);
 	cursor: pointer;
 }
