[ADD & FIX] MyInfo Page, commons

--- a/src/components/Common/Post/PostFile/PostFile.scss
+++ b/src/components/Common/Post/PostFile/PostFile.scss
@@ -1,20 +1,24 @@
+@mixin flexStyle() {
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+}
+
 .PostFile {
 	margin-top: 14px;
+	cursor: pointer;
 
 	&-File {
-		display: flex;
-		display: -webkit-flex;
-		align-items: center;
+		@include flexStyle();
 		border: 1px solid var(--skyBlue);
 		border-radius: 5px;
 		padding: 10px;
 		color: var(--fontGray);
-		font-size: 14px;
 
 		&-Icon {
 			font-size: 28px;
 			font-weight: bold;
-			margin-right: 4px;
+			margin-right: 8px;
 			color: var(--main);
 		}
 	}
