--- a/src/styles/Palette/Palette.scss
+++ b/src/styles/Palette/Palette.scss
@@ -19,6 +19,10 @@
 	--lighterGreen: #55efc4;
 	--background: #ffffff;
 
+	--bronze: #cd7f32;
+	--silver: #c0c0c0;
+	--gold: #ffd700;
+
 	--rgbaPrimary: rgb(89, 130, 200);
 	--rgbaBackground: rgba(241, 242, 246, 0.02);
 }
