--- a/src/components/Common/Post/PostFile/PostFile.scss
+++ b/src/components/Common/Post/PostFile/PostFile.scss
@@ -6,20 +6,31 @@
 
 .PostFile {
 	margin-top: 14px;
-	cursor: pointer;
 
 	&-File {
 		@include flexStyle();
+		justify-content: space-between;
 		border: 1px solid var(--skyBlue);
 		border-radius: 5px;
 		padding: 10px;
 		color: var(--fontGray);
 
-		&-Icon {
-			font-size: 28px;
-			font-weight: bold;
-			margin-right: 8px;
+		&-Left {
+			@include flexStyle();
+			flex: 1;
+
+			&-Icon {
+				font-size: 28px;
+				font-weight: bold;
+				margin-right: 8px;
+				color: var(--main);
+			}
+		}
+
+		&-Filter {
 			color: var(--main);
+			font-size: 24px;
+			cursor: pointer;
 		}
 	}
 }
