--- a/src/styles/AllStyles.scss
+++ b/src/styles/AllStyles.scss
@@ -24,25 +24,13 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 
-	// &::-webkit-scrollbar {
-	// 	width: 14px;
-	// }
+	&::-webkit-scrollbar {
+		width: 8px;
+	}
 
-	// &::-webkit-scrollbar-track {
-	// 	background-color: #f1f1f1;
-	// }
-
-	// &::-webkit-scrollbar-thumb {
-	// 	background-color: $primary;
-	// 	border-radius: 5px;
-	// }
-
-	// &::-webkit-scrollbar-button:start:decrement,
-	// ::-webkit-scrollbar-button:end:increment {
-	// 	width: 14px;
-	// 	height: 14px;
-	// 	background-color: $primary;
-	// }
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--main);
+	}
 }
 
 td {
