--- a/src/styles/Palette/Palette.scss
+++ b/src/styles/Palette/Palette.scss
@@ -5,7 +5,7 @@
 	--green: #27ae60;
 	--blue: #0984e3;
 	--skyBlue: #75a4f5;
-	--indigo: #192a56;
+	--navy: #000080;
 	--purple: #6c5ce7;
 	--mint: #00d2d3;
 	--pink: #e84393;
