--- a/src/components/Post/PostForm/PostTitle/PostTitle.scss
+++ b/src/components/Post/PostForm/PostTitle/PostTitle.scss
@@ -3,7 +3,7 @@
 	outline: none;
 	border: none;
 	border-bottom: 1px solid var(--gray);
-	padding: 0 4px 8px 4px;
+	padding: 0 4px 8px 0;
 	font-size: 18px;
 	font-weight: bold;
 
