--- a/src/components/Post/PostForm/PostForm.scss
+++ b/src/components/Post/PostForm/PostForm.scss
@@ -11,6 +11,13 @@
 	margin: 2rem auto;
 	padding: 4px;
 
+	&-TagCategory {
+		display: flex;
+		display: -webkit-flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
 	&-Files {
 		margin: 10px 0;
 		padding: 0 6px;
